--- a/Project_Soccer.qmd
+++ b/Project_Soccer.qmd
@@ -25,7 +25,8 @@ library(dplyr)
 # Function to scrape transfer data for a given season
 scrape_transfer_data <- function(season) {
   
-  url <- sprintf("https://www.transfermarkt.co.uk/premier-league/transfers/wettbewerb/GB1/saison_id/%d", season)
+  url <- sprintf("https://www.transfermarkt.co.uk/premier-league/transfers/wettbewerb/GB1/saison_id/%d", 
+  season)
   cat("Scraping transfer data for season:", season, "\n")
   
   # Reading the page content
@@ -79,7 +80,8 @@ scrape_transfer_data <- function(season) {
 # Function to scrape the EPL league table data for a given season
 scrape_epl_table <- function(season) {
   # Constructing the URL for the league table
-  url <- sprintf("https://www.transfermarkt.co.uk/premier-league/tabelle/wettbewerb/GB1/saison_id/%d", season)
+  url <- sprintf("https://www.transfermarkt.co.uk/premier-league/tabelle/wettbewerb/GB1/saison_id/%d", 
+  season)
   cat("Scraping league table data for season:", season, "\n")
   
   page <- tryCatch({
@@ -133,24 +135,24 @@ So firstly, I created two specialized functions to collect historical Premier Le
 My second function, scrape_epl_table(), works similarly but targets the final league standings. It grabs position information, team names, match statistics (played, wins, draws, losses), and point totals. For both functions, I format the season nicely (like "1992/93") and transform each row of data into a list format that will work well for JSON export. I also included thorough validation checks to ensure the tables contain the expected number of columns before processing them. This approach lets me build a comprehensive dataset spanning nearly three decades of Premier League history in a structured format that's ready for analysis.
 
 ```{r}
-# # Looping through each season from 1992/93 (season = 1992) to 2021/22 (season = 2021)
-# for (season in 1992:2021) {
-#   cat("Processing season:", season, "\n")
+# Looping through each season from 1992/93 (season = 1992) to 2021/22 (season = 2021)
+for (season in 1992:2021) {
+  cat("Processing season:", season, "\n")
   
-#   # Scrape transfer data for the season
-#   transfers <- scrape_transfer_data(season)
-#   if (length(transfers) > 0) {
-#     transfer_data_all <- c(transfer_data_all, transfers)
-#   }
-#   Sys.sleep(2) 
+  # Scrape transfer data for the season
+  transfers <- scrape_transfer_data(season)
+  if (length(transfers) > 0) {
+    transfer_data_all <- c(transfer_data_all, transfers)
+  }
+  Sys.sleep(2) 
   
-#   # Scrape league table data
-#   league_table <- scrape_epl_table(season)
-#   if (length(league_table) > 0) {
-#     epl_table_all <- c(epl_table_all, league_table)
-#   }
-#   Sys.sleep(2)
-# }
+  # Scrape league table data
+  league_table <- scrape_epl_table(season)
+  if (length(league_table) > 0) {
+    epl_table_all <- c(epl_table_all, league_table)
+  }
+  Sys.sleep(2)
+}
 ```
 
 After creating the specialized scraping functions, I used this loop to process 30 seasons of Premier League data. For each season, I first called scrape_transfer_data() to extract the transfer information, then added the results to my growing collection if data was successfully retrieved.
@@ -284,7 +286,8 @@ transfer_data <- transfer_data_raw %>%
     expenditure = jstring("expenditure"),
     balance = jstring("balance")
   ) %>% 
-  # cleaning columns that are meant to be numbers by removing non numeric characters
+  # cleaning columns that are meant to be numbers by 
+  # removing non numeric characters
   # and converting them to number type
   mutate(
     club = mapply(normalise_club_name, club),
@@ -326,7 +329,8 @@ epl_tables <- epl_tables_raw %>%
     goal_diff = parse_number(goal_diff),
     points = parse_number(points)
   ) %>% 
-  select(season, position, club, played, won, drawn, lost, goals_for, goals_against, goal_diff, points)
+  select(season, position, club, played, won, drawn, 
+  lost, goals_for, goals_against, goal_diff, points)
 
 sorted_tables <- epl_tables %>% 
   group_by(season) %>% 
@@ -351,7 +355,8 @@ library(prophet)
 library(caret)
 library(ranger)
 
-data <- read.csv("/Users/namomac/Downloads/Income_expenditure_table_posItions_1992-2021.csv", stringsAsFactors = FALSE)
+data <- read.csv("/Users/namomac/Downloads/Income_expenditure_table_posItions_1992-2021.csv", 
+stringsAsFactors = FALSE)
 names(data)
 ```
 
@@ -385,7 +390,9 @@ ggplot(winners_summary, aes(x = reorder(club, count), y = count)) +
 From the graph, it can be seen that Manchester United has won 13 Premier League titles in 30 seasons, cementing their historic dominance. One now may look at how much each club spent on average and in total for their title victories.
 
 ```{r echo=FALSE}
-kable(winners_summary %>% select(club, total_spend, average_expenditure), caption = "Expenditure for each title win", col.names = c("Club names", "Total Expenditure (M) EUR", "Average per title (M) EUR"))
+kable(winners_summary %>% select(club, total_spend, average_expenditure), 
+caption = "Expenditure for each title win", 
+col.names = c("Club names", "Total Expenditure (M) EUR", "Average per title (M) EUR"))
 ```
 
 Ok so when I looked at the table of title-winning clubs and their expenditures, I was struck by just how much spending varied between champions. Manchester United managed to win many titles with a total spend of about 421 million euros, averaging just over 32 million per title.
@@ -404,7 +411,8 @@ total_spend <- winners %>%
   summarise(
     total_wins = n(),
     total_spend = sum(expenditure_m),
-    total_spend_fmt = formatC(total_spend, format = "f", big.mark = ",", digits = 1),
+    total_spend_fmt = formatC(total_spend, 
+    format = "f", big.mark = ",", digits = 1),
     average_expenditure = mean(expenditure_m),
     total_income = sum(income_m),
     average_income = mean(income_m),
@@ -456,7 +464,8 @@ library(ggplot2)
 data <- data %>%
   mutate(
     season_year = as.numeric(substr(season, 1, 4)),
-    relative_expenditure = expenditure_m / mean(expenditure_m, na.rm = TRUE)
+    relative_expenditure = 
+    expenditure_m / mean(expenditure_m, na.rm = TRUE)
   )
 ```
 
@@ -513,7 +522,8 @@ top_clubs <- head(clubs_with_history, 6)
 # Plotting expenditure trends for top clubs
 expenditure_plot <- ggplot() +
   theme_light() +
-  labs(title = "Expenditure Trends for Top Premier League Clubs",
+  labs(title = "Expenditure Trends for 
+  Top Premier League Clubs",
        x = "Season", 
        y = "Expenditure (M EUR)")
 
@@ -538,7 +548,8 @@ While all the clubs have generally spent more as the years have gone by, the flu
 # Analyzing relationship between expenditure and position
 position_plot <- ggplot() +
   theme_light() +
-  labs(title = "League Position vs. Expenditure for Top Premier League Clubs",
+  labs(title = "League Position vs. Expenditure for 
+  Top Premier League Clubs",
        x = "Season", 
        y = "Position (lower is better)")
 
@@ -546,10 +557,12 @@ for(club in top_clubs) {
   club_data <- club_ts_list[[club]]$data
   position_plot <- position_plot + 
     geom_line(data = club_data, 
-              aes(x = season_year, y = position, color = club),
+              aes(x = season_year, y = position, 
+              color = club),
               size = 1) +
     geom_point(data = club_data, 
-               aes(x = season_year, y = position, color = club))
+               aes(x = season_year, y = position, 
+               color = club))
 }
 
 print(position_plot + scale_y_reverse())
@@ -602,7 +615,8 @@ Tottenham, Leeds, and others have spent less and generally finished lower, while
 So this table really highlights for me how sustained investment often goes hand-in-hand with better league finishes, but spending alone doesn’t always guarantee a top spot every year.
 
 ```{r}
-# Forecasting expenditure for the next 5 seasons for a selected club (e.g., Manchester United)
+# Forecasting expenditure for the next 5 seasons 
+# for a selected club (e.g., Manchester United)
 selected_club <- "Manchester United"
 
 if(selected_club %in% names(club_ts_list)) {
@@ -622,8 +636,10 @@ if(selected_club %in% names(club_ts_list)) {
        ylab = "Expenditure (M EUR)")
   
   # Generate forecast table
-  forecast_years <- (club_ts$last_year + 1):(club_ts$last_year + forecast_years)
-  forecast_seasons <- paste0(forecast_years, "/", substr(forecast_years + 1, 3, 4))
+  forecast_years <- 
+  (club_ts$last_year + 1):(club_ts$last_year + forecast_years)
+  forecast_seasons <- paste0(forecast_years, "/", 
+  substr(forecast_years + 1, 3, 4))
   
   forecast_table <- data.frame(
     Season = forecast_seasons,
@@ -689,7 +705,8 @@ prepare_ml_data <- function(club_ts) {
     expenditure = as.numeric(club_ts$expenditure_ts)
   ) %>%
     mutate(
-      expenditure_ma3 = zoo::rollmean(expenditure, 3, fill = NA, align = "right")
+      expenditure_ma3 = zoo::rollmean(expenditure, 3, 
+      fill = NA, align = "right")
     )
   return(df)
 }
@@ -764,7 +781,8 @@ generate_forecasts <- function(model, last_known_data, horizon) {
     pred <- switch(
       class(model)[1],
       "ARIMA" = forecast(model, h = 1)$mean[1],
-      "prophet" = predict(model, make_future_dataframe(model, periods = 1))$yhat[1],
+      "prophet" = predict(model, 
+      make_future_dataframe(model, periods = 1))$yhat[1],
       "randomForest" = predict(model, current_data),
       "svm" = predict(model, current_data),
       "keras.engine.sequential.Sequential" = predict(model, current_data)
@@ -828,7 +846,8 @@ evaluate_models <- function(models, test_data) {
 ## Executing for Top Clubs
 
 ```{r}
-data <- read.csv("Income_expenditure_table_posItIons_1992-2021.csv", stringsAsFactors = FALSE)
+data <- read.csv("Income_expenditure_table_posItIons_1992-2021.csv", 
+stringsAsFactors = FALSE)
 
 # Ensuring column names are lower case for consistency
 names(data) <- tolower(names(data))
@@ -862,7 +881,8 @@ theme_set(theme_minimal())
 ```{r}
 load_process_data <- function() {
   # Reading and validating raw data
-  raw_data <- read.csv("/Users/namomac/Downloads/Income_expenditure_table_posItions_1992-2021.csv") %>%
+  raw_data <- read.csv("/Users/namomac/Downloads/Income_expenditure_
+  table_posItions_1992-2021.csv") %>%
     mutate(
       season_year = as.numeric(substr(as.character(season), 1, 4)),
       expenditure_m = as.numeric(expenditure_m),
@@ -908,12 +928,14 @@ arima_forecast <- function(ts_object, horizon = 20) {
     forecast <- forecast::forecast(model, h = horizon)
     
     tibble(
-      year = seq(ts_object$last_year + 1, length.out = horizon),
+      year = seq(ts_object$last_year + 1, 
+      length.out = horizon),
       forecast = as.numeric(forecast$mean),
       club = ts_object$club
     )
   }, error = function(e) {
-    message("Forecast failed for ", ts_object$club, ": ", e$message)
+    message("Forecast failed for ", ts_object$club, ": ", 
+    e$message)
     return(NULL)
   })
 }
